force-app/main/default/objects/AccountContactRelation/fields/All_Divisions__c.field-meta.xml
<CustomField>
    <fullName>All_Divisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Divisions</label>
    <type>Checkbox</type>
</CustomField>