force-app/main/default/objects/AccountContactRelation/fields/BusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinessDivision__c</fullName>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessDivisions</valueSetName>
    </valueSet>
</CustomField>