force-app/main/default/objects/AccountContactRelation/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegments</valueSetName>
    </valueSet>
</CustomField>