force-app/main/default/objects/AccountContactRelation/fields/PortalUser__c.field-meta.xml
<CustomField>
    <fullName>PortalUser__c</fullName>
    <formula>Contact.IsPortalUser__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal User</label>
    <type>Checkbox</type>
</CustomField>